--- a/Quiz.Mvc/Views/Question/Index.cshtml
+++ b/Quiz.Mvc/Views/Question/Index.cshtml
@@ -5,11 +5,12 @@
 }
 <table class="table table-sm table-striped">
     <thead>
-    <tr><th>Quiz Name</th><th>Quiz Theme Name</th><th>Question Type Name</th><th>Answer Type Name</th><th>Actions</th></tr>
+    <tr><th>Question No</th><th>Quiz Name</th><th>Quiz Theme Name</th><th>Question Type Name</th><th>Answer Type Name</th><th>Actions</th></tr>
     </thead>
     <tbody>
     @foreach (var question in Model) {
         <tr>
+            <td>@question.QuestionNo</td>
             <td>@question.QuizName</td>
             <td>@question.QuizThemeName</td>
             <td>@question.QuestionTypeName</td>
