--- a/Quiz.Mvc/Views/Question/Index.cshtml
+++ b/Quiz.Mvc/Views/Question/Index.cshtml
@@ -34,5 +34,5 @@
 
 <div class="text-center">
     <a asp-action="Create" class="btn btn-primary">Create New Question</a>
-    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go To Home</a>
+    <a asp-controller="Question" asp-action="Index" class="btn btn-primary">Go To Home</a>
 </div>
