--- a/Quiz.Mvc/Views/Question/QuizThemesByQuestions.cshtml
+++ b/Quiz.Mvc/Views/Question/QuizThemesByQuestions.cshtml
@@ -19,5 +19,6 @@
 </table>
 
 <div class="text-center">
+    <a asp-action="Create" class="btn btn-primary">Create New Question</a>
     <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go To Home</a>
 </div>
