--- a/Quiz.Mvc/Views/AnswerType/EditAnswerType.cshtml
+++ b/Quiz.Mvc/Views/AnswerType/EditAnswerType.cshtml
@@ -58,6 +58,7 @@
         <label for="sel1">Answer Type Name</label>
         <input asp-for="AnswerTypeName" class="form-control"/>
         
+        <input asp-for="AnswerTypeDescription" class="form-control" hidden="true" />
     </div>
     
     <div class="text-center">
