--- a/Quiz.Mvc/Views/Question/CheckBoxPartialView.cshtml
+++ b/Quiz.Mvc/Views/Question/CheckBoxPartialView.cshtml
@@ -1,29 +1,99 @@
-@model AnswerTypeConfiguration
+@model AnswerTypeConfigurationSummary
 @using QuizData
 
 
-<label>Check Correct Answer(s)</label>
-<br />
+<script language="javascript" type="text/javascript">
 
-@{
+    var data = new Array();
+    var correctAnswer = "";
 
-    if (Model != null)
-    {
-        switch (Model.Type)
-        {
-            case RenderType.CheckBox:
-                for (int i = 0; i < Model.Count - 1; i++)
-                {
-                    @Html.CheckBox("Check" + i, false)
-                }
-                break;
-            case RenderType.RadioGroup:
-            case RenderType.None:
-                break;
+    function checkBoxChanged() {
+        correctAnswer = "";
+        for (var j = 1; j <= @Model.AnswerTypeConfiguration.Count * @Model.AnswerTypeConfiguration.RowCount; j++) {
+            var ischecked = window.$('#Check' + j).is(":checked");
+            if (ischecked) {
+                correctAnswer += ',' + j.toString();
+            }
         }
     }
-    else
-    {
-        @Html.CheckBox("Check" + 0, false)
+
+
+    $('#textbox').change(function () {
+        correctAnswer = "";
+        correctAnswer = window.$('#textbox').val();
+    });
+
+</script>
+
+
+<div>
+    <label>Check Correct Answer(s)</label>
+    <br />
+
+    @{
+        if (Model != null && Model.AnswerTypeConfiguration != null)
+        {
+            var answerTypeConfiguration = Model.AnswerTypeConfiguration;
+            var correctAnswer = Model.CorrectAnswer;
+            int[] correctAnswerIDs = new int[100];
+
+            if (!string.IsNullOrEmpty(correctAnswer))
+            {
+                correctAnswerIDs = correctAnswer.Split(",").Select(n => Convert.ToInt32(n)).ToArray();
+            }
+
+
+            switch (answerTypeConfiguration.Type)
+            {
+                case RenderType.CheckBox:
+                    int k = 1;
+                    for (int i = 1; i <= answerTypeConfiguration.RowCount; i++)
+                    {
+                        for (int j = 1; j <= answerTypeConfiguration.Count; j++)
+                        {
+                            if (correctAnswerIDs.Contains(k))
+                            {
+                                @Html.CheckBox("Check" + k, true, new { onchange = "checkBoxChanged()" })
+                            }
+                            else
+                            {
+                                @Html.CheckBox("Check" + k, false, new { onchange = "checkBoxChanged()" })
+                            }
+
+                            @Html.Label(k.ToString(), k.ToString(), new { Style = "margin-right: 65px; " })
+                            k += 1;
+                        }
+                        <br />
+                    }
+                    break;
+                case RenderType.Input:
+                    for (int i = 1; i <= answerTypeConfiguration.Count; i++)
+                    {
+                        if (!string.IsNullOrEmpty(correctAnswer))
+                        {
+                            @Html.TextBox("Input" + i, correctAnswer, new { id = "textbox" })
+                        }
+                        else
+                        {
+                            @Html.TextBox("Input" + i, "", new { id = "textbox" })
+                        }
+                    }
+                    break;
+                case RenderType.RadioGroup:
+                case RenderType.None:
+                    break;
+            }
+        }
+        else
+        {
+            @Html.CheckBox("Check" + 0, false)
+        }
+
+        if (!string.IsNullOrEmpty(Model.CorrectAnswer))
+        {
+            string correctAnswer = Model.CorrectAnswer;
+
+        }
     }
-}
+
+</div>
